<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--    tools:context=".ui.LoginFragment">-->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="124dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            app:layout_constraintTop_toBottomOf="@id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginEmail"
            app:layout_constraintTop_toBottomOf="@+id/emailText"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/passText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInput"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@+id/passText"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/passInput"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
             />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    app:layout_constraintTop_toBottomOf="@id/button"
    app:layout_constraintStart_toStartOf="parent"
    android:text="@string/register"
    android:clickable="true"
    android:textColorLink="@color/purple_200"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>